[package]
name = "btcmarkets-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ring = "0.16"
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"

