[package]
name = "btcmarkets-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ring = "0.17"
base64 = "0.22"
tokio = { version = "1.48", features = ["full"] }
dotenv = "0.15.0"

